<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundWhite"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/placeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/gapRegular"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/gapSmall"
                android:text="@string/location" />

            <TextView
                android:id="@+id/tvSunriseTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/gapSmall"
                android:text="@string/sunrise_time" />

            <TextView
                android:id="@+id/tvSunsetTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sunset_time" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:weightSum="2">

            <Button
                android:id="@+id/buttonMyPlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/current_location" />

            <Button
                android:id="@+id/buttonPickPlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/pick_place" />
        </LinearLayout>


    </LinearLayout>

</layout>
